--- a/src/input.css
+++ b/src/input.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 @import "tailwindcss-animated";
+
+.font-lora {
+    font-family: "Lora", serif;
+}
+
+.font-great {
+    font-family: "Great Vibes", cursive;
+}
