--- a/output.css
+++ b/output.css
@@ -6,18 +6,30 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-200: oklch(0.885 0.062 18.334);
+    --color-amber-200: oklch(0.924 0.12 95.746);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-3xl: 48rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
+    --text-8xl: 6rem;
+    --text-8xl--line-height: 1;
+    --text-9xl: 8rem;
+    --text-9xl--line-height: 1;
     --font-weight-bold: 700;
+    --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
@@ -304,6 +316,12 @@
   .inline {
     display: inline;
   }
+  .inline-flex {
+    display: inline-flex;
+  }
+  .list-item {
+    display: list-item;
+  }
   .table {
     display: table;
   }
@@ -343,6 +361,21 @@
   .w-30 {
     width: calc(var(--spacing) * 30);
   }
+  .w-50 {
+    width: calc(var(--spacing) * 50);
+  }
+  .w-52 {
+    width: calc(var(--spacing) * 52);
+  }
+  .w-80 {
+    width: calc(var(--spacing) * 80);
+  }
+  .w-90 {
+    width: calc(var(--spacing) * 90);
+  }
+  .w-100 {
+    width: calc(var(--spacing) * 100);
+  }
   .w-full {
     width: 100%;
   }
@@ -363,6 +396,9 @@
   }
   .grow {
     flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .scale-x-\[-1\] {
     --tw-scale-x: -1;
@@ -419,6 +455,9 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
@@ -434,6 +473,9 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
@@ -445,11 +487,68 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-3 {
+    border-style: var(--tw-border-style);
+    border-width: 3px;
+  }
+  .border-5 {
+    border-style: var(--tw-border-style);
+    border-width: 5px;
+  }
+  .border-\[var\(--primary-color\)\] {
+    border-color: var(--primary-color);
+  }
+  .border-\[var\(--se-color\)\] {
+    border-color: var(--se-color);
+  }
+  .border-\[var\(--secondary-color\)\] {
+    border-color: var(--secondary-color);
+  }
+  .border-amber-200 {
+    border-color: var(--color-amber-200);
+  }
   .border-black {
     border-color: var(--color-black);
   }
-  .bg-\[\#ddc198\] {
-    background-color: #ddc198;
+  .border-red-200 {
+    border-color: var(--color-red-200);
+  }
+  .border-white {
+    border-color: var(--color-white);
+  }
+  .bg-\[\#0000ff80\] {
+    background-color: #0000ff80;
+  }
+  .bg-\[\#fff80\] {
+    background-color: #fff80;
+  }
+  .bg-\[\#fffff80\] {
+    background-color: #fffff80;
+  }
+  .bg-\[\#ffffff40\] {
+    background-color: #ffffff40;
+  }
+  .bg-\[\#ffffff80\] {
+    background-color: #ffffff80;
+  }
+  .bg-\[\#ffffffc0\] {
+    background-color: #ffffffc0;
+  }
+  .bg-\[rgba\(0\,0\,255\,0\.5\)\] {
+    background-color: rgba(0,0,255,0.5);
+  }
+  .bg-\[var\(--secondary-color\)\] {
+    background-color: var(--secondary-color);
+  }
+  .bg-amber-200 {
+    background-color: var(--color-amber-200);
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .bg-cover {
     background-size: cover;
@@ -459,6 +558,12 @@
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -483,6 +588,10 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
@@ -496,6 +605,12 @@
   }
   .text-\[\#521111\] {
     color: #521111;
+  }
+  .text-\[var\(--primary\)\] {
+    color: var(--primary);
+  }
+  .text-\[var\(--primary-color\)\] {
+    color: var(--primary-color);
   }
   .text-black {
     color: var(--color-black);
@@ -523,6 +638,12 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .opacity-10 {
+    opacity: 10%;
+  }
+  .opacity-50 {
+    opacity: 50%;
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -742,14 +863,409 @@
       }
     }
   }
+  .hover\:bg-\[var\(--primary\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--primary);
+      }
+    }
+  }
+  .hover\:bg-\[var\(--primary-color\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--primary-color);
+      }
+    }
+  }
+  .focus\:bg-\[\#521111\] {
+    &:focus {
+      background-color: #521111;
+    }
+  }
+  .focus\:bg-\[var\(--primary\)\] {
+    &:focus {
+      background-color: var(--primary);
+    }
+  }
+  .focus\:bg-\[var\(--primary-color\)\] {
+    &:focus {
+      background-color: var(--primary-color);
+    }
+  }
+  .active\:bg-\[\#521111\] {
+    &:active {
+      background-color: #521111;
+    }
+  }
+  .active\:bg-\[var\(--primary\)\] {
+    &:active {
+      background-color: var(--primary);
+    }
+  }
+  .active\:bg-\[var\(--primary-color\)\] {
+    &:active {
+      background-color: var(--primary-color);
+    }
+  }
   .motion-reduce\:animate-none {
     @media (prefers-reduced-motion: reduce) {
       animation: none;
     }
   }
+  .sm\:w-50 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 50);
+    }
+  }
+  .sm\:w-80 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 80);
+    }
+  }
+  .sm\:pb-25 {
+    @media (width >= 40rem) {
+      padding-bottom: calc(var(--spacing) * 25);
+    }
+  }
   .sm\:pb-50 {
     @media (width >= 40rem) {
       padding-bottom: calc(var(--spacing) * 50);
+    }
+  }
+  .lg\:-right-0 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -0);
+    }
+  }
+  .lg\:-right-5 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -5);
+    }
+  }
+  .lg\:-right-10 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -10);
+    }
+  }
+  .lg\:-right-20 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -20);
+    }
+  }
+  .lg\:-right-25 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -25);
+    }
+  }
+  .lg\:-right-35 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -35);
+    }
+  }
+  .lg\:-right-50 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -50);
+    }
+  }
+  .lg\:-right-205 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * -205);
+    }
+  }
+  .lg\:right-0 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:right-15 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * 15);
+    }
+  }
+  .lg\:right-25 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * 25);
+    }
+  }
+  .lg\:-bottom-0 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -0);
+    }
+  }
+  .lg\:-bottom-2 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -2);
+    }
+  }
+  .lg\:-bottom-5 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -5);
+    }
+  }
+  .lg\:-bottom-10 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -10);
+    }
+  }
+  .lg\:-bottom-15 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -15);
+    }
+  }
+  .lg\:-bottom-20 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -20);
+    }
+  }
+  .lg\:-bottom-25 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -25);
+    }
+  }
+  .lg\:-bottom-100 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * -100);
+    }
+  }
+  .lg\:bottom-0 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:bottom-5 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:bottom-20 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * 20);
+    }
+  }
+  .lg\:-left-0 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -0);
+    }
+  }
+  .lg\:-left-2 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -2);
+    }
+  }
+  .lg\:-left-10 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -10);
+    }
+  }
+  .lg\:-left-15 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -15);
+    }
+  }
+  .lg\:-left-20 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -20);
+    }
+  }
+  .lg\:-left-25 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -25);
+    }
+  }
+  .lg\:-left-30 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -30);
+    }
+  }
+  .lg\:-left-35 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -35);
+    }
+  }
+  .lg\:-left-40 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -40);
+    }
+  }
+  .lg\:-left-50 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -50);
+    }
+  }
+  .lg\:-left-250 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * -250);
+    }
+  }
+  .lg\:left-0 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:left-10 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:left-15 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 15);
+    }
+  }
+  .lg\:left-20 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 20);
+    }
+  }
+  .lg\:left-25 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 25);
+    }
+  }
+  .lg\:left-100 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 100);
+    }
+  }
+  .lg\:w-3xl {
+    @media (width >= 64rem) {
+      width: var(--container-3xl);
+    }
+  }
+  .lg\:w-5 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:w-8 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:w-10 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:w-25 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 25);
+    }
+  }
+  .lg\:w-30 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 30);
+    }
+  }
+  .lg\:w-35 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 35);
+    }
+  }
+  .lg\:w-40 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 40);
+    }
+  }
+  .lg\:w-50 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 50);
+    }
+  }
+  .lg\:w-52 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 52);
+    }
+  }
+  .lg\:w-80 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 80);
+    }
+  }
+  .lg\:w-100 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 100);
+    }
+  }
+  .lg\:w-150 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 150);
+    }
+  }
+  .lg\:w-250 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 250);
+    }
+  }
+  .lg\:gap-5 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:gap-25 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 25);
+    }
+  }
+  .lg\:pb-5 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:pb-10 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:pb-15 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 15);
+    }
+  }
+  .lg\:pb-25 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 25);
+    }
+  }
+  .lg\:text-2xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .lg\:text-3xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .lg\:text-5xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .lg\:text-7xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-7xl);
+      line-height: var(--tw-leading, var(--text-7xl--line-height));
+    }
+  }
+  .lg\:text-8xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-8xl);
+      line-height: var(--tw-leading, var(--text-8xl--line-height));
+    }
+  }
+  .lg\:text-9xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-9xl);
+      line-height: var(--tw-leading, var(--text-9xl--line-height));
     }
   }
   .lg\:text-xl {
@@ -767,6 +1283,10 @@
       }
     }
   }
+}
+:root {
+  --primary-color: #521111;
+  --secondary-color: #ddc198;
 }
 .font-lora {
   font-family: "Lora", serif;
