--- a/input.css
+++ b/input.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 @import "tailwindcss-animated";
 
+:root {
+    --primary-color: #521111;
+    --secondary-color: #ddc198;
+}
+
 .font-lora {
     font-family: "Lora", serif;
 }
